@@ -1,69 +1,0 @@
-/********************************************************************************
- * CruiseControl, a Continuous Integration Toolkit
- * Copyright (c) 2007, ThoughtWorks, Inc.
- * 200 E. Randolph, 25th Floor
- * Chicago, IL 60601 USA
- * All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- *
- *     + Redistributions of source code must retain the above copyright
- *       notice, this list of conditions and the following disclaimer.
- *
- *     + Redistributions in binary form must reproduce the above
- *       copyright notice, this list of conditions and the following
- *       disclaimer in the documentation and/or other materials provided
- *       with the distribution.
- *
- *     + Neither the name of ThoughtWorks, Inc., CruiseControl, nor the
- *       names of its contributors may be used to endorse or promote
- *       products derived from this software without specific prior
- *       written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR
- * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
- * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
- * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
- * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
- * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
- * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
- * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- ********************************************************************************/
-package net.sourceforge.cruisecontrol.dashboard;
-
-import net.sourceforge.cruisecontrol.Modification;
-
-import java.util.Collection;
-import java.util.LinkedHashMap;
-import java.util.Map;
-
-public class ModificationSet {
-
-    private final Map<ModificationKey, Modification> store = new LinkedHashMap<ModificationKey, Modification>();
-
-    public void add(final String type, final String user, final String comment, final String revision,
-                    final ModificationAction action, final String filename) {
-
-        final ModificationKey key = new ModificationKey(comment, user);
-        final Modification modification;
-        if (!store.containsKey(key)) {
-            modification = new Modification();
-            modification.type = type;
-            modification.userName = user;
-            modification.comment = comment;
-            store.put(key, modification);
-        } else {
-            modification = store.get(key);
-        }
-        modification.files.add(new Modification.ModifiedFile(filename, revision, "", action.toString()));
-    }
-
-    public Collection<Modification> getModifications() {
-        return store.values();
-    }
-}
